--- a/Public/calendar.html
+++ b/Public/calendar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pride Events Near You</title>
+    <title>Calendar - Pride Events</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,12 +17,10 @@
     </nav>
 
     <main>
-        <h2>Today's Events Near You</h2>
-        <div id="events-container">
-            <p>Loading events...</p>
-        </div>
+        <h2>Upcoming Pride Events</h2>
+        <div id="calendar"></div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="calendar.js"></script>
 </body>
 </html>
