--- a/Public/calendar.html
+++ b/Public/calendar.html
@@ -18,7 +18,16 @@
 
     <main>
         <h2>Upcoming Pride Events</h2>
-        <div id="calendar"></div>
+        <div id="calendar">
+            <iframe 
+  src="https://calendar.google.com/calendar/embed?src=a7611588aff40c850452a5e9d60af5d3fddee0cfaec13f5c00b6e5ca11c1e367%40group.calendar.google.com" 
+  style="border: 0" 
+  width="800" 
+  height="600" 
+  frameborder="0" 
+  scrolling="no">
+</iframe>
+        </div>
     </main>
 
     <script src="calendar.js"></script>
