--- a/Public/calendar.html
+++ b/Public/calendar.html
@@ -28,6 +28,14 @@
   scrolling="no">
 </iframe>
         </div>
+
+        <section id="chat">
+  <h2>Ask for event ideas</h2>
+  <div id="chat-log" style="border:1px solid #ccc; padding:10px; min-height:120px; margin-bottom:10px;"></div>
+  <input id="chat-input" type="text">
+  <button id="chat-send">Send</button>
+</section>
+
     </main>
 
     <script src="calendar.js"></script>
