--- a/Public/index.html
+++ b/Public/index.html
@@ -16,7 +16,7 @@
             <a href="calendar.html">Calendar</a>
             <a href="submit.html">Submit Event</a>
         </div>
-        <div class="line"></div>
+        <!-- <div class="line"></div> -->
     </nav>
 
     <main>
