--- a/Public/submit.html
+++ b/Public/submit.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@1,5..1200,300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submit an Event - Pride Events</title>
@@ -8,8 +11,8 @@
 </head>
 <body>
     <nav>
-        <h1>🏳️‍🌈 Pride Events</h1>
         <div class="nav-links">
+            <h1 class="title">Rainbow Rendezvous</h1>
             <a href="index.html">Home</a>
             <a href="calendar.html">Calendar</a>
             <a href="submit.html">Submit Event</a>
