--- a/Public/calendar.html
+++ b/Public/calendar.html
@@ -32,12 +32,14 @@
 </iframe>
         </div>
 
-        <section id="chat">
-  <h2>Ask for event ideas</h2>
-  <div id="chat-log" style="border:1px solid #ccc; padding:10px; min-height:120px; margin-bottom:10px;"></div>
-  <input id="chat-input" type="text">
-  <button id="chat-send">Send</button>
-</section>
+         <section id="chat">
+            <h2>Ask for Event Ideas</h2>
+            <div id="chat-log"></div>
+            <div style="display: flex;">
+                <input id="chat-input" type="text" placeholder="e.g., 'Show me events this weekend'">
+                <button id="chat-send">Send</button>
+            </div>
+        </section>
 
     </main>
 
