--- a/Public/calendar.html
+++ b/Public/calendar.html
@@ -12,7 +12,10 @@
 <body>
      <nav>
         <div class="nav-links">
-            <h1 class="title">Rainbow Rendezvous</h1>
+            <h1 class="title">
+                <img src="logo.jpg" alt="Logo" class="logo">
+                <b>Rainbow Rendezvous</b>
+            </h1>
             <a href="index.html">Home</a>
             <a href="calendar.html">Calendar</a>
             <a href="submit.html">Submit Event</a>
