home page limited to 3 events

--- a/Public/submit.html
+++ b/Public/submit.html
@@ -21,6 +21,7 @@
 
     <main>
         <h2>Submit a Pride Event</h2>
+        <div class="event-form">
         <form id="event-form">
 
             <div>
@@ -64,6 +65,7 @@
                 <input type="text" id="event-location" required>
             </div>
             
+        </div>
             <br></br>
             <!--
             
