--- a/Public/submit.html
+++ b/Public/submit.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="nav-links">
             <h1 class="title">
-                <img src="logo.jpg" alt="Logo" class="logo">
+                <img src="LogoTransparent.PNG" alt="Logo" class="logo">
                 <b>Rainbow Rendezvous</b>
             </h1>
             <a href="index.html">Home</a>
