--- a/Public/index.html
+++ b/Public/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <main>
-        <h2>Today's Events Near You</h2>
+        <h2>Upcoming Events Near You</h2>
         <div id="events-container">
             <p>Loading events...</p>
         </div>
