--- a/Public/submit.html
+++ b/Public/submit.html
@@ -68,7 +68,9 @@
                 <input type="text" id="event-location" required>
             </div>
             <br></br>
-            <button type="submit">Submit Event</button>
+            <button type="submit" id="submit-event">Submit Event</button>
+<!-- 
+            <img src="Pride1.jpg" alt="Pride Image" class="submit-image"> -->
         </div>
 
             <!--
